--- a/produtos.html
+++ b/produtos.html
@@ -11,6 +11,7 @@
   <link href="css/sobre.css" rel="stylesheet">
   <link href="css/produtos.css" rel="stylesheet">
   <link href="css/responsivo.css" rel="stylesheet">
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
@@ -36,13 +37,13 @@
 <!-- capa principal -->
 <section class="introducao-interna interna_produtos">
   <div class="container">
-    <h1>Produtos</h1>
-    <p>conheça todos os nossos produtos</p>
+    <h1 class="fadeInDown" data-anime="400">Produtos</h1>
+    <p class="fadeInDown" data-anime="800">conheça todos os nossos produtos</p>
   </div>
 </section>
 
 <!-- Produtos Passeio -->
-<section class="container produto_item">
+<section class="container produto_item fadeInDown" data-anime="1200">
   <div class="grid-11">
     <img alt="Bikcraft Passeio" src="img/produtos/bikcraft-passeio-1.jpg">
     <h2>Passeio</h2>
@@ -68,7 +69,7 @@
   </div>
 </section>
 <!-- Produtos Esporte -->
-<section class="container produto_item">
+<section class="container produto_item fadeInDown" data-anime="1400">
   <div class="grid-11">
     <img alt="Bikcraft Esporte" src="img/produtos/bikcraft-esporte-1.jpg">
     <h2>Esporte</h2>
@@ -83,8 +84,7 @@
 
   <div class="grid-8 produto_info">
     <p>No mundo atual, a continua expansao de nossa atividade cumpre um papel essencial na fórmula da gestão inovadora
-      da
-      qual fazemos parte inovadora da qual fazemos parte.</p>
+      da qual fazemos parte inovadora da qual fazemos parte.</p>
     <ul>
       <li>Conforto</li>
       <li>Velocidade</li>
@@ -94,7 +94,7 @@
   </div>
 </section>
 <!-- Produtos Retro -->
-<section class="container produto_item">
+<section class="container produto_item fadeInDown" data-anime="1600">
   <div class="grid-11">
     <img alt="Bikcraft Retro" src="img/produtos/bikcraft-retro-1.jpg">
     <h2>Retro</h2>
@@ -208,6 +208,9 @@
   </div>
 
 </footer>
+<!-- JS -->
+<script src="js/simple-anime.js"></script>
+<script src="js/script.js"></script>
 
 </body>
 
