--- a/contato.html
+++ b/contato.html
@@ -10,6 +10,8 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/contato.css" rel="stylesheet">
   <link href="css/responsivo.css" rel="stylesheet">
+  <script>document.documentElement.classList.add('js');</script>
+
 </head>
 
 <body>
@@ -35,13 +37,13 @@
 <!-- capa principal -->
 <section class="introducao-interna interna_contato">
   <div class="container">
-    <h1>Contato</h1>
-    <p>tire as suas dúvidas com a gente</p>
+    <h1 data-anime="400" class="fadeInDown">Contato</h1>
+    <p data-anime="800" class="fadeInDown">tire as suas dúvidas com a gente</p>
   </div>
 </section>
 
 <!-- Orçamento formulário -->
-<section class="contato container">
+<section class="contato container fadeInDown" data-anime="1200">
   <form action="" class="grid-8 contato-form" id="form_orcamento">
     <label for="nome">Nome</label>
     <input id="nome" type="text" value>
@@ -58,7 +60,7 @@
     <button class="btn btn-preto" type="submit">Enviar</button>
   </form>
 
-  <div class="contato_dados grid-8">
+  <div class="contato_dados grid-8" >
     <h3>Dados</h3>
     <span>+55 21 93223 3232</span>
     <span>orcamento@bikcraft.com</span>
@@ -77,7 +79,7 @@
 </section>
 
 <!-- Mapa -->
-<section class="container contato_mapa">
+<section class="container contato_mapa fadeInDown" data-anime="1600">
   <a class="grid-16" href="http://www.google.com" target="_blank"><img alt="Endereço da Bikcraft"
                                                                        src="img/endereco-bikcraft.jpg"></a>
 </section>
@@ -133,7 +135,9 @@
   </div>
 
 </footer>
-
+<!-- JS -->
+<script src="js/simple-anime.js"></script>
+<script src="js/script.js"></script>
 </body>
 
 </html>
