--- a/sobre.html
+++ b/sobre.html
@@ -10,6 +10,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/sobre.css" rel="stylesheet">
   <link href="css/responsivo.css" rel="stylesheet">
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
@@ -35,13 +36,13 @@
 <!--  -->
 <section class="introducao-interna interna_sobre">
   <div class="container">
-    <h1>Sobre</h1>
-    <p>conheça mais sobre a Bikcraft</p>
+    <h1 data-anime="400" class="fadeInDown">Sobre</h1>
+    <p data-anime="800" class="fadeInDown">conheça mais sobre a Bikcraft</p>
   </div>
 </section>
 
 <!---->
-<section class="missao_sobre container">
+<section class="missao_sobre container fadeInDown" data-anime="1200">
   <div class="grid-10">
     <h2 class="subtitulo-interno">Historia, Missao e Visao</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolorem dolorum ducimus, fugiat laudantium
@@ -145,7 +146,9 @@
   </div>
 
 </footer>
-
+<!-- JS -->
+<script src="js/simple-anime.js"></script>
+<script src="js/script.js"></script>
 </body>
 
 </html>
