--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
     <ul class="qualidade_lista">
       <li class="grid-1-3">
         <h3>Durabilidade</h3>
-        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação renovação renovação</p>
+        <p>Sólida como pedra, leve como o vento e resistente como o diamante, são nossos diferenciais.</p>
       </li>
 
       <li class="grid-1-3">
         <h3>Design</h3>
-        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação renovação renovação</p>
+        <p>Feitas sob medida para o melhor conforto e eficiência. Adaptamos a sua Bikcraft para o seu corpo.</p>
       </li>
 
       <li class="grid-1-3">
         <h3>Sustentabilidade</h3>
-        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação renovação renovação</p>
+        <p>Além de ajudar a cuidar do meio ambiente, tirando carros da rua, toda a produção é sustentável.</p>
       </li>
     </ul>
 
@@ -155,8 +155,7 @@
 
         <div class="grid-8 footer_historia">
           <h3>Nossa História</h3>
-          <p>O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana.
-            interesse por todos os detalhes da vida cotidiana.</p>
+          <p>Quando iniciamos a Bikcraft queriamos apenas um produto que adoraríamos utilizar. Eramos apaixonados por pedalar e também por fazer as coisas com as nossas próprias mãos. Assim surgiu um sonho na garagem da nossa casa.</p>
         </div>
 
         <div class="grid-4 footer_contato">
