--- a/sobre.html
+++ b/sobre.html
@@ -55,21 +55,17 @@
   <section class="missao_sobre container fadeInDown" data-anime="1200">
     <div class="grid-10">
       <h2 class="subtitulo-interno">Historia, Missao e Visao</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolorem dolorum ducimus, fugiat laudantium
-        maxime nesciunt nostrum sequi voluptatem voluptatum. Enim incidunt, laborum nisi placeat possimus sapiente soluta
-        vitae voluptatibus.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur aut consequuntur deserunt,
-        dolore doloribus facilis ipsam itaque maxime obcaecati officiis optio praesentium repellat sit sunt, tenetur
-        velit, voluptatem voluptatum?</p>
+      <p>Quando iniciamos a Bikcraft queriamos apenas um produto que adoraríamos utilizar. Eramos apaixonados por pedalar e também por fazer as coisas com as nossas próprias mãos. Assim surgiu um sonho na garagem da nossa casa.</p>
+      <p>Conheça os nossos produtos, pergunte para os nossos clientes e descubra a maravilha de ter uma Bikcraft na sua casa.</p>
     </div>
 
     <div class="grid-6">
       <h2 class="subtitulo-interno">Valores</h2>
       <ul>
-        <li>-Qualidade no processo</li>
-        <li>-Foco no cliente</li>
-        <li>-Diversao preservando a</li>
-        <li>-natureza com sustentabilidade</li>
+        <li>- Qualidade no processo com</li>
+        <li>- Foco no cliente sem perder a</li>
+        <li>- Diversão, preservando a</li>
+        <li>- Natureza com sustentabilidade</li>
       </ul>
     </div>
 
@@ -86,17 +82,17 @@
     <ul class="qualidade_lista">
       <li class="grid-1-3">
         <h3>Durabilidade</h3>
-        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação renovação renovação</p>
+        <p>Sólida como pedra, leve como o vento e resistente como o diamante, são nossos diferenciais.</p>
       </li>
 
       <li class="grid-1-3">
         <h3>Design</h3>
-        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação renovação renovação</p>
+        <p>Feitas sob medida para o melhor conforto e eficiência. Adaptamos a sua Bikcraft para o seu corpo.</p>
       </li>
 
       <li class="grid-1-3">
         <h3>Sustentabilidade</h3>
-        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação renovação renovação</p>
+        <p>Além de ajudar a cuidar do meio ambiente, tirando carros da rua, toda a produção é sustentável.</p>
       </li>
     </ul>
 
@@ -109,7 +105,7 @@
   <!-- Frase antes do footer -->
   <div class="quebra">
     <blockquote class="quote-externo container">
-      <p>"o verdadeiro segredo da felicidade esá em ter um genuíno interesse por todos os detalhes da vida cotidiana."</p>
+      <p>“o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana.”</p>
       <cite>William Morris</cite>
     </blockquote>
   </div>
@@ -121,8 +117,7 @@
 
         <div class="grid-8 footer_historia">
           <h3>Nossa História</h3>
-          <p>O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana.
-            interesse por todos os detalhes da vida cotidiana.</p>
+          <p>Quando iniciamos a Bikcraft queriamos apenas um produto que adoraríamos utilizar. Eramos apaixonados por pedalar e também por fazer as coisas com as nossas próprias mãos. Assim surgiu um sonho na garagem da nossa casa.</p>
         </div>
 
         <div class="grid-4 footer_contato">
